--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang"en">
+<html lang="en">
 <head>
-<title> Idk what title to put here
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<p> test
-</p>
+    <p> TESTSETSETTSETSETESTESTEST
+        </p>
 </body>
 </html>
