--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Herkansing Eindopdracht</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p> TESTSETSETTSETSETESTESTEST
-        </p>
+
+  <header>
+    <h1>Front-End Eindopdracht</h1>
+  </header>
+
+  <main>
+    <section class="intro">
+      <h2>Introductie</h2>
+      <p>Ik ben Bertan Otun</p>
+    </section>
+
+    <section class="content">
+      <h2>Hoofdinformatie</h2>
+      <p>Belangrijkste informatie</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Bertan Otun</p>
+  </footer>
+
 </body>
 </html>
