--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 <body>
 
   <header>
-    <h1>Front-End Eindopdracht</h1>
+    <h1>Project Titel</h1>
+    <!-- Beschrijving van de website voor SEO -->
+    <meta name="description" content="Een projectwebsite met duidelijke secties en navigatie voor optimale gebruikerservaring.">
   </header>
 
   <main>
     <section class="intro">
       <h2>Introductie</h2>
-      <p>Ik ben Bertan Otun</p>
+      <p>Een korte introductietekst voor de inhoud van de site.</p>
     </section>
 
     <section class="content">
       <h2>Hoofdinformatie</h2>
-      <p>Belangrijkste informatie</p>
+      <p>Hier komt de belangrijkste informatie die de gebruiker moet zien.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2024 Bertan Otun</p>
+    <p>&copy; 2024 Mijn Bedrijf</p>
   </footer>
 
 </body>
