--- a/index.html
+++ b/index.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Herkansing Eindopdracht</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bertan Otun Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="logo">Logo</div>
+        <nav>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+        </nav>
+    </header>
 
-  <header>
-    <h1>Project Titel</h1>
-    <!-- Beschrijving van de website voor SEO -->
-    <meta name="description" content="Een projectwebsite met duidelijke secties en navigatie voor optimale gebruikerservaring.">
-  </header>
-
-  <main>
-    <section class="intro">
-      <h2>Introductie</h2>
-      <p>Een korte introductietekst voor de inhoud van de site.</p>
+    <section class="hero">
+        <img src="header-background.jpg" alt="Header Background" class="hero-bg">
+        <h1>Headline goes here</h1>
+        <p>Short introductory text about the portfolio.</p>
+        <div class="buttons">
+            <a href="#" class="button">Link</a>
+            <a href="#" class="button">Link</a>
+        </div>
     </section>
 
-    <section class="content">
-      <h2>Hoofdinformatie</h2>
-      <p>Hier komt de belangrijkste informatie die de gebruiker moet zien.</p>
+    <section class="cards-section">
+        <h2>Subheading</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="project1.jpg" alt="Project Image">
+                <p>Project description goes here.</p>
+                <span>★★★★☆</span>
+                <a href="#" class="button">Link</a>
+            </div>
+            <div class="card">
+                <img src="project2.jpg" alt="Project Image">
+                <p>Project description goes here.</p>
+                <span>★★★☆☆</span>
+                <a href="#" class="button">Link</a>
+            </div>
+            <div class="card">
+                <img src="project3.jpg" alt="Project Image">
+                <p>Project description goes here.</p>
+                <span>★★★★☆</span>
+                <a href="#" class="button">Link</a>
+            </div>
+        </div>
     </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Mijn Bedrijf</p>
-  </footer>
-
 </body>
 </html>
