--- a/index.html
+++ b/index.html
@@ -1,5 +1,51 @@
-<!-- do not change the markup -->
-<a href="#">
-  Checkout
-</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bertan Otun Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <img src="https://seeklogo.com/images/R/red-letter-b-logo-4503B43B9F-seeklogo.com.png" alt="Bertan Otun Logo">
+        </div>
+        <nav>
+            <a href="#">Projects</a>
+            <a href="#">About me</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
 
+    <section class="hero">
+        <img src="https://i.imgur.com/mAqJBoH.jpeg" alt="Header Background" class="hero-bg">
+        <h1>Bertan Otun</h1>
+        <p>Welcome to my portfolio.</p>
+    </section>
+
+    <section class="cards-section">
+        <h2>Subheading</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="https://i.imgur.com/IJphuwH.png" alt="Project Image">
+                <p>This is a prototype game called paratrooper.</p>
+                <span>★★★★☆</span>
+                <a href="#" class="button">Download</a>
+            </div>
+            <div class="card">
+                <img src="https://i.imgur.com/Kgskkdc.png" alt="Project Image">
+                <p>A versus game. The goal is to let your opponent fall down by using paint.</p>
+                <span>★★★☆☆</span>
+                <a href="#" class="button">Download</a>
+            </div>
+            <div class="card">
+                <img src="https://i.imgur.com/XgHNHMe.png" alt="Project Image">
+                <p>Party Prepper is a Puzzle Game, your goal is to solve your way out to the end.</p>
+                <span>★★★★☆</span>
+                <a href="#" class="button">Download</a>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
